<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/login_bg"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="14sp"
            android:layout_gravity="center"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:gravity="center"
                android:background="@drawable/bg_profile_img">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/user_place_holder"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/ico_camera"/>

            </RelativeLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:textSize="14sp"
                    android:checked="true"
                    android:text="User"/>

                <RadioButton
                    android:id="@+id/rb_retailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:buttonTint="@color/white"
                    android:textSize="14sp"
                    android:text="Retailer"/>

            </RadioGroup>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="136dp"
                android:layout_marginTop="30dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="136dp"
                    android:background="@drawable/rounded_background_white"
                    android:alpha=".19"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="45dp">

                        <ImageView
                            android:id="@+id/iv_userOrBusiness"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_margin="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ico_user_name"/>

                        <EditText
                            android:id="@+id/ed_userName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName"
                            android:padding="5dp"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:hint="@string/fullname"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="45dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_margin="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ico_email"/>

                        <EditText
                            android:id="@+id/ed_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"
                            android:padding="5dp"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:hint="@string/email"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_margin="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ico_password"/>

                        <EditText
                            android:id="@+id/ed_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"
                            android:padding="5dp"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textColorHint="@color/white"
                            android:background="@null"
                            android:imeOptions="actionDone"
                            android:hint="@string/password"/>

                    </LinearLayout>


                    <RelativeLayout
                        android:id="@+id/bisuness_layout"
                        android:layout_width="match_parent"
                        android:layout_height="91dp"
                        android:visibility="invisible">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:background="@color/white" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:layout_margin="10dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ico_phone_call"/>

                                <EditText
                                    android:id="@+id/ed_phoneNo"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:inputType="phone"
                                    android:padding="5dp"
                                    android:textColor="@color/white"
                                    android:textSize="14sp"
                                    android:textColorHint="@color/white"
                                    android:background="@null"
                                    android:hint="@string/phone_no"/>

                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:background="@color/white" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="45dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:alpha="0.0">

                                    <fragment
                                        android:id="@+id/place_autocomplete_fragment"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment" />

                                </LinearLayout>


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="45dp"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:id="@+id/image2"
                                        android:layout_width="25dp"
                                        android:layout_height="25dp"
                                        android:layout_margin="10dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ico_address"/>

                                    <TextView
                                        android:id="@+id/ed_address"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:padding="5dp"
                                        android:clickable="false"
                                        android:focusable="false"
                                        android:textColor="@color/white"
                                        android:gravity="left|center"
                                        android:textSize="14sp"
                                        android:textColorHint="@color/white"
                                        android:hint="@string/business_address"/>

                                </LinearLayout>

                            </RelativeLayout>


                        </LinearLayout>


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/rounded_background_white"
                            android:alpha=".19"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:id="@+id/imageView2" />

                    </RelativeLayout>


                </LinearLayout>

            </RelativeLayout>
            
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:text="@string/sign_up"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/rounded_background_primary"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/already_have_account"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:textSize="14sp"
                android:text="@string/login"/>
        </LinearLayout>

    </LinearLayout>

    </ScrollView>


</RelativeLayout>
